llvm/test/aqs.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/test/aqs.llvm:11:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
